--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@ svg {
         </div>
 
         <div class="home-img">
-            <img src="blob:https://web.whatsapp.com/6c981232-c73b-4083-a3bb-2851de0560a0" align="right">
+            <img src="https://photos.google.com/photo/AF1QipOUUGYQJ_tzgXRxR_YM6XMHrW54FJGRYNzd2apB" align="right">
         </div>
     </section>
 
