--- a/index.html
+++ b/index.html
@@ -1046,14 +1046,14 @@ svg {
         </div>
 
         <div class="home-img">
-            <img src="https://photos.google.com/photo/AF1QipOUUGYQJ_tzgXRxR_YM6XMHrW54FJGRYNzd2apB" align="right">
+            <img src="https://photos.google.com/photo/AF1QipO1vxYrQM2O6IUtpIYqSWP95QGroDRla78YGcVc" align="right">
         </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="C:\Users\HP\Downloads\adiii.jfif" alt="">
+            <img src="https://photos.google.com/photo/AF1QipOUUGYQJ_tzgXRxR_YM6XMHrW54FJGRYNzd2apB" alt="">
         </div>
 
         <div class="about-content">
